project cleaning and uNav update

--- a/pages/beat.html
+++ b/pages/beat.html
@@ -86,26 +86,26 @@
 
 
 					
-					<strong class="topHeading">Problem Statement</strong></br>
+					<strong class="topHeading beatColor">Problem Statement</strong></br>
 				Design an application that helps connect people through music</br></br>
 
-				<strong class="topHeading">Solution Statement</strong></br>
+				<strong class="topHeading beatColor">Solution Statement</strong></br>
 				A platform which enables users to connect based on similar music interests. The users can create and share their music profiles, music moods, music player - a one stop solution for all music needs.<br><br>
 
-			<strong class="topHeading">Role</strong></br>
+			<strong class="topHeading beatColor">Role</strong></br>
 			I was responsible for conducting User Experience Research overnight which guided all the features and converted individual screens into a interactive prototype.
 			<br><br>
 
 
-			<strong class="topHeading">Team</strong></br>
+			<strong class="topHeading beatColor">Team</strong></br>
 			Pranshu Bansal,
 			Varnit Jain, 
 			Sarthak Marwaha,
 			Shikhar Sehdev,
 		Abhinav Thukral</br></br>
 
-		<strong class="topHeading">Timeline</strong></br>
-	18:00, 24 March 2017 - 10:00, 25 March 2017 (16 hours)</br></br>
+		<strong class="topHeading beatColor">Timeline</strong></br>
+	16 hours (18:00, 24 March 2017 - 10:00, 25 March 2017)</br></br>
 
 </div>
 
@@ -130,7 +130,7 @@
 		<p class="sectionHeading"><strong>RESEARCH</strong></p><br>
 
 
-		<strong class="topHeading">Survey</strong>
+		<strong class="topHeading beatColor">Survey</strong>
 		<p class="contentTextDown">
 			We had an hour to conduct a survey, that would help us validate our ideas and know more about our audience. We spread across a google form and managed to received 62 responses from students in the age group of 15-21.<br><br>
 
@@ -151,7 +151,7 @@
 			84% people would be open to listening to lesser known artists. And 63% said that they would like to share their mood with their friends with a song. In the music player section, we added a button to share a 10 second clip of the song they're listening to as "Mood". The browse tab allowed users to listen to new, trending artists, works of music, that would not generally show up in their feed.<br><br><br><br></p>
 
 
-			<strong class="topHeading">The Pull Factor</strong>
+			<strong class="topHeadin beatColor">The Pull Factor</strong>
 			<p class="contentTextDown">
 				The elements of design for a platform that people come back to use. The Hooked model of behavior design by Nir Eyal consists of 4 key points:</p>
 
@@ -260,9 +260,9 @@
 <div class="footer">
 
 	<ul>
-		<li id="overview-color">Overview</li>
-		<li id="research-color">Research</li>
-		<li id="feature-color">Features</li>
+		<li id="overview-color" onclick="location='#overview-tag' ">Overview</li>
+		<li id="research-color" onclick="location='#research-tag' ">Research</li>
+		<li id="feature-color" onclick="location='#feature-tag' ">Features</li>
 	</ul>
 
 </div>
