--- a/pages/mime.html
+++ b/pages/mime.html
@@ -89,28 +89,29 @@
 
 
 					
-				<strong  class="topHeading">Hypothesis</strong></br>
+				<strong  class="topHeading mimeColor">Hypothesis</strong></br>
 				Meme preferences can be an intrinsic indicator of personality traits</br></br>
 
-				<strong  class="topHeading">Solution Statement</strong></br>
+				<strong  class="topHeading mimeColor">Solution Statement</strong></br>
 				An Android platform for all meme needs - a maker space where users can create memes, a personalized meme feed, and a space to connect with other meme enthusiasts.<br><br>
 
-			<strong  class="topHeading">Role</strong></br>
-			I was responsible for managing the project and ensuring our team met all the deadlines. I was responsible for conducting User Experience Research at each stage of the project while leading the developement team. We were able to design, develope, and deploy a full scale app within 15 months. 
+			<strong  class="topHeading mimeColor">Role</strong></br>
+						I was responsible for leading the research, design, and development in a diverse team to take a concept to a product level - MIME, an android platform (800 organic users). I was responsible for conducting User Experience Research at each stage of the project while leading the developement team. We were able to design, develope, and deploy a full scale app within 15 months. 
+
 			<br><br>
 
 
-			<strong  class="topHeading">Team</strong></br>
+			<strong  class="topHeading mimeColor">Team</strong></br>
 			Pranshu Bansal, 
 			Chirag Jain, 
 			Varnit Jain, 
 			Ponnurangam Kumaruguru, 
 			Sarthak Marwaha
 		</br></br>
-		<strong  class="topHeading">Timeline</strong></br>
+		<strong  class="topHeading mimeColor">Timeline</strong></br>
 	Jan 2018 - April 2019</br></br>
 
-	<strong  class="topHeading">Android Store</strong></br> 
+	<strong  class="topHeading mimeColor">Android Store</strong></br> 
 			<a href="https://play.google.com/store/apps/details?id=com.precog.mime&hl=en_US" target="_blank">
 			Download Link
 			</a></br></br>
