--- a/pages/jamoora.html
+++ b/pages/jamoora.html
@@ -78,8 +78,9 @@
 
 			<p class="contentTextDown">
 
-					‍<br><strong class="topHeading">Abstract</strong></br>
+					‍<br><strong class="topHeading jamooraColor">Abstract</strong></br>
 					Jamoora is a performer in Indian traditional folk theatre who plays the role of a sidekick. We propose the concept of implicit control of Jamoora, a robotic puppet, using music and storytelling. The puppeteer controls the actions of Jamoora using keywords woven into a story told by him while playing live music which sets the emotional tone. We take inputs from Indian musical instruments, determine the corresponding raga - an organized sequence of musical notes associated with emotions and ambiance, and then map the associated emotions to the body language of Jamoora. This integration of puppetry, music, and speech creates a rich medium of storytelling. <br><br>
+					<strong>Selected in the Student Innovation Contest at 31st ACM User Interface Software and Technology Symposium (UIST) 2018</strong><br>
 
 				</p>
 
@@ -91,25 +92,25 @@
 
 				<div class="col-lg-6 contentText ">
 
-				<strong class="topHeading">Challenge Statement</strong></br>
+				<strong class="topHeading jamooraColor">Challenge Statement</strong></br>
 				Novel interaction without hands
 				<br><br>
 									
 
-				<strong class="topHeading">Role</strong></br>
+				<strong class="topHeading jamooraColor">Role</strong></br>
 				I was responsible for designing the building the actual robot. I studied and implemented animatronic principles to realize the vision of the story. I was also responsible for developing the Speech Recognition Module and the wireless communication channel between the control center and the robot.
 				<br><br>
 
 
-				<strong class="topHeading">Team</strong></br>
+				<strong class="topHeading jamooraColor">Team</strong></br>
 				Varnit Jain,
 				Aman Parnami,
 				Anant Sharma
 			</br></br>
 
-			<strong class="topHeading">Timeline</strong></br> Jul 2018 - Oct 2018</br></br>
+			<strong class="topHeading jamooraColor">Timeline</strong></br> Jul 2018 - Oct 2018</br></br>
 
-			<strong class="topHeading">Extended Abstract</strong></br> 
+			<strong class="topHeading jamooraColor">Extended Abstract</strong></br> 
 			<a href="uist-paper.pdf
 			" target="_blank">
 			Download Link
@@ -194,10 +195,10 @@
 <div class="footer">
 
 	<ul>
-		<li id="overview-color">Overview</li>
-		<li id="mot-color">Motivation</li>
-		<li id="info-color">Information Flow</li>
-		<li id="pres-color">Presentation</li>
+		<li id="overview-color" onclick="location='#overview-tag' ">Overview</li>
+		<li id="mot-color" onclick="location='#mot-tag' ">Motivation</li>
+		<li id="info-color" onclick="location='#info-tag' ">Information Flow</li>
+		<li id="pres-color" onclick="location='#pres-tag' ">Presentation</li>
 	</ul>
 
 </div>
