project cleaning and uNav update

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 				<section id="projects"></section>
 
-				<p><a href="resume_varnit.pdf" id="arrow" class="parent" target="_blank"><strong>Resume&nbsp;&nbsp;&nbsp;</strong>
+				<p><a href="resume_varnit_jain.pdf" id="arrow" class="parent" target="_blank"><strong>Resume&nbsp;&nbsp;&nbsp;</strong>
 					<i class="fa">&#xf054;</i>
 
 				</a></p>
