--- a/pages/mime.html
+++ b/pages/mime.html
@@ -78,12 +78,17 @@
 
 			<div class="row">
 
-				<div class="col-lg-3 topImg d-flex align-items-center">
+				<!-- <div class="col-lg-3 topImg d-flex align-items-center">
 					<img src="mime-main-2.jpeg" class="phoneImage" width="100%">
 				</div>
 				<div class="col-lg-3 topImg d-flex align-items-center">
 					<img src="mime-main-1.jpeg" class="phoneImage" width="100%">
+				</div> -->
+
+				<div class="col-lg-6 topImg d-flex align-items-center">
+					<img src="mime-main.png" class="" width="100%">
 				</div>
+				
 
 				<div class="col-lg-6 contentText ">
 
@@ -114,6 +119,11 @@
 	<strong  class="topHeading mimeColor">Android Store</strong></br> 
 			<a href="https://play.google.com/store/apps/details?id=com.precog.mime&hl=en_US" target="_blank">
 			Download Link
+			</a></br></br>
+
+			<strong  class="topHeading mimeColor">Article</strong></br> 
+			<a href="mime-article.pdf" target="_blank">
+			Link
 			</a></br></br>
 
 
