--- a/pages/sherpa.html
+++ b/pages/sherpa.html
@@ -147,7 +147,22 @@
 				</div>
 
 				<div class="col-lg-8">
+					<div class="swiper-container">
+						<div class="swiper-wrapper ppRowWithout image-link2">
+						  	<div class="swiper-slide"><a href="sherpaS-1.png"><img src="sherpaS-1.png" class="smallImages" width="100%"></a></div>
+						  	<div class="swiper-slide"><a href="sherpaS-2.png"><img src="sherpaS-2.png" class="smallImages" width="100%"></a></div>
+						  	<div class="swiper-slide"><a href="sherpaS-3.png"><img src="sherpaS-3.png" class="smallImages" width="100%"></a></div>
+						  	<div class="swiper-slide"><a href="sherpaS-4.png"><img src="sherpaS-4.png" class="smallImages" width="100%"></a></div>
+						</div>
+						<div class="swiper-button-next swiper-button-black"></div>
+						<div class="swiper-button-prev swiper-button-black"></div>
+					</div>
+					<div class=" imageText" align="center">
+						Results
+					</div>
+				</div>
 
+<!-- 
 					<div class="row">
 						<div class="col-lg-6">
 							<img src="sherpaS-1.png" class="smallImages" width="100%">
@@ -164,12 +179,11 @@
 							<img src="sherpaS-4.png" class="smallImages" width="100%">
 						</div>
 					</div>
-
+ -->
 					
 				</div>
 
 
-			</div>
 
 			<br><br>
 
@@ -180,7 +194,7 @@
 
 		      <!-- Swiper -->
 			<div class="swiper-container">
-				<div class="swiper-wrapper ppRow image-link1">
+				<div class="swiper-wrapper ppRowWith image-link1">
 				  	<div class="swiper-slide"><a href="sherpa-af0.jpeg"><img src="sherpa-af0.jpeg" class="smallImages" width="100%"></a></div>
 				  	<div class="swiper-slide"><a href="sherpa-af1.jpg"><img src="sherpa-af1.jpg" class="smallImages" width="100%"></a></div>
 				  	<div class="swiper-slide"><a href="sherpa-af2.jpg"><img src="sherpa-af2.jpg" class="smallImages" width="100%"></a></div>
@@ -188,6 +202,9 @@
 				</div>
 				<div class="swiper-button-next swiper-button-white"></div>
 				<div class="swiper-button-prev swiper-button-white"></div>
+				<div class="bottomMargin imageText" align="center">
+				Affinity Map
+				</div>
 			</div>
 
 
@@ -244,6 +261,9 @@
 
 						<div class="swiper-button-next swiper-button-white"></div>
 						<div class="swiper-button-prev swiper-button-white"></div>
+						<div class="bottomMargin imageText" align="center">
+						Personas
+						</div>
 					</div><br><br>
 
 
@@ -325,6 +345,9 @@
 
 								<div class="swiper-button-next swiper-button-white"></div>
 								<div class="swiper-button-prev swiper-button-white"></div>
+								<div class="imageText" align="center">
+								Concepts Sorting
+								</div>
 							</div>
 						</div>
 
@@ -521,7 +544,10 @@
 						‍To test our design ideas, we created another survey to reach out to a wider audience. To achieve the same, we shared the survey not only to bicycling communities but also on famous facebook, reddit pages. This survey focused on Learnability, Efficiency, Memorability, Errors, Satisfaction as well as feature level evaluations. We wanted to know which features seemed attractive and useful to users and which ones felt obsolete to them. We <span class="sherpaColor"> received 44 responses and evaluated which features overcame initial pain points and were appreciated by the users.</span>
 					</p><br>
 
-					<img src="sherpa-evaluation.png" class="middleImg swiper-container" width="50%"><br><br>					
+					<img src="sherpa-evaluation.png" class="middleImg swiper-container" width="50%">
+					<div class="bottomMargin imageText" align="center">
+					Concept/Feature Evaluation
+					</div>					
 					<hr width="100%">
 
 				</div>
@@ -624,7 +650,10 @@
  						<br><br>
 						</p>
 
-						<img src="sherpa-proto-2.png" class="middleImg" width="60%"><br><br>
+						<img src="sherpa-proto-2.png" class="middleImg" width="60%">
+						<div class="bottomMargin imageText" align="center">
+						Interactive Prototype 
+						</div>	
 
 
 						
