--- a/index.html
+++ b/index.html
@@ -86,8 +86,16 @@
 
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
+				<a href="nibbles.html" id="arrow" class="parent"><strong>Nibbles&nbsp;&nbsp;&nbsp;</strong><i class="fa">&#xf054;</i>
+				</a>
+
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
 				<a href="resume_varnit_jain.pdf" id="arrow" class="parent" target="_blank"><strong>Resume&nbsp;&nbsp;&nbsp;</strong><i class="fa">&#xf054;</i>
-				</a></p>
+				</a>
+
+
+				</p>
 			</div>
 
 		</div>
