--- a/pages/unav.html
+++ b/pages/unav.html
@@ -243,14 +243,14 @@
 							  	<div class="swiper-slide"><a href="unav-interview.JPG"><img src="unav-interview.JPG" class="smallImages" width="100%"></a></div>
 							  	<!-- <div class="swiper-slide"><a href="ncr/p4.png"><img src="ncr/p4.png" class="smallImages" width="100%"></a></div> -->
 							</div>
-							<!-- <div class=" imageText" align="center"> -->
+							<div class=" imageText" align="center">
 								
 							</div>
 						</div>
 
 					<!-- <img src="unav-interview.JPG" class="middleImg" width="60%"> -->
 					<div class="bottomMargin imageText" align="center">
-					<!-- Interview -->
+					Interview
 					</div>	
 
 					<strong class="topHeading unavColor">Survey</strong>
