--- a/pages/unav.html
+++ b/pages/unav.html
@@ -363,32 +363,35 @@
 							</div>
 							<br>
 							<div class="ppRow2">
-								<img src="ncr/2.svg" class="painPointsImg">Users unfamiliar with maintenance rely and depend on others with more experience
+								<img src="ncr/2.svg" class="painPointsImg">Users did not notice that there were more options to certain menu items due to the scroll bar being too light in contrast compared to the background. 
+
 							</div>
 							<br>
 							<div class="ppRow2">
 								<img src="ncr/3.svg" class="painPointsImg">
-								Community resources are not readily available
+								Certain areas of the screen are challenging for users with physical impairments to reach or see from where they are seated
+
 							</div>
 							<br>
 							<div class="ppRow2">
 								<img src="ncr/4.svg" class="painPointsImg">
-								Users feel helpless when they are unable to perform maintenance tasks themselves
+								Users became frustrated with the slow movement and interaction controls of the uNav device
+
 							</div>
 							<br>
 							<div class="ppRow2">
 								<img src="ncr/5.svg" class="painPointsImg">
-								Instruction guides do not directly correlate to the user’s own bike components or situation
+								Users were often unaware of how to add an item to cart before checkout
 							</div>
 							<br>
 							<div class="ppRow2">
 								<img src="ncr/6.svg" class="painPointsImg">
-								Users have difficulty performing maintenance tasks for the first time
+								Users want to remain independent, and not made to feel “special"
 							</div>
 							<br>
 							<div class="ppRow2">
 								<img src="ncr/7.svg" class="painPointsImg">
-								Users can be apprehensive to visit bike shops due to perceived cost
+								Feedback is important
 							</div>
 						</div>
 
