--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
 
 		<div class="collapse navbar-collapse flex-grow-1 text-right " id="navbarNav">
 			<ul class="nav navbar-nav ml-auto flex-nowra">
-				<li class="nav-item"><a class="nav-link px-3 cool-link" href="#about" id="aboutColor">ABOUT</a></li>
+				<li class="nav-item"><a class="nav-link px-3 cool-link" href="more.html" id="aboutColor">ABOUT</a></li>
 				<li class="nav-item"><a class="nav-link px-3  cool-link" href="#projects">PROJECTS</a></li>
+				<li class="nav-item"><a class="nav-link px-3  cool-link" href="resume_varnit_jain.pdf" target="_blank">RESUME</a></li>
 				<li class="nav-item"><a class="nav-link px-3  cool-link" href="#contact">CONTACT</a></li>
 				<!-- <li class="nav-item"><a class="nav-link px-3  cool-link" href="pages/blog.html">BLOG</a></li> -->
 			</ul>
@@ -81,21 +82,17 @@
 
 				<section id="projects"></section>
 
-				<p><a href="more.html" id="arrow" class="parent"><strong>More&nbsp;&nbsp;&nbsp;</strong><i class="fa">&#xf054;</i>
+				<!-- <p><a href="more.html" id="arrow" class="parent"><strong>More&nbsp;&nbsp;&nbsp;</strong><i class="fa">&#xf054;</i>
 				</a>
-
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
 				<a href="nibbles.html" id="arrow" class="parent"><strong>Nibbles&nbsp;&nbsp;&nbsp;</strong><i class="fa">&#xf054;</i>
 				</a>
-
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-
 				<a href="resume_varnit_jain.pdf" id="arrow" class="parent" target="_blank"><strong>Resume&nbsp;&nbsp;&nbsp;</strong><i class="fa">&#xf054;</i>
 				</a>
+				</p> -->
 
 
-				</p>
 			</div>
 
 		</div>
