--- a/more.html
+++ b/more.html
@@ -68,26 +68,7 @@
 				<!-- I am looking for an internship for summer 2020 that will challenge me to solve everyday problems using creative solutions while enabling me to contribute, learn, and grow.  -->
 				<br>
 				<p class="contentTextMore">
-				Recently, I realized that while I see technology as a tool, many see it as a hurdle. My objective is to focus on finding solutions that help people overcome this hurdle. The keywords are Simplify and Enable. <strong> I want to simplify technology so that aspiring developers can make a real impact, and I want to enable a new wave of people who currently find technology inaccessible. <br></strong>
-				As connected devices march towards ubiquity, our future is resplendent with opportunities. I want to realize my vision for democratizing the development of technology by collaborating with individuals that offer unique perspectives. <strong> I believe that the best way to predict the future is not just to create it but to empower others to create it. </strong>
-				</p>
-
-				<br>
-				<!-- <strong>Note</strong> -->
-				<p class="contentTextMore">
-				While I yearn to understand what is best for the user, I also realize that my research impacts various teams in the product cycle. I believe that my technical background empowers me to add another layer of understanding when talking to users and understanding various development ramifications.<br> <br>
-
-				<strong>Example 1:</strong>
-				I am working with clinicians at Emory University to develop an android application (PECSS) that aims to augment treatment for PTSD patients. While taking interviews, I was able to asses the development cost of each new technological requirement and found an agreeable product that could be delivered within the project timeline. <br><br>
-
-				<strong>Example 2:</strong>
-				I worked on a project where we designed an application that helps cyclists perform maintenance and repair tasks. The project had an Augmented Reality (AR) feature that helped recognize various parts of the bike. My knowledge of AR helped us make the feature feasible, and the 3D models created by bike manufacturers can be leveraged to develop it.<br><br>
-
-				<strong>Example 3:</strong> 
-				Last semester, I worked with NCR to redesign their XK32 Kiosk to be more inclusive. I was able to analyze the additional cost of setting up hardware and software support for various concepts, and we eventually came up with a concept that could be used by NCR at their next rollout.
-				</p>
-
-				
+				Software + Hardware + UX
 				</p>	
  
 
