--- a/pages/mime.html
+++ b/pages/mime.html
@@ -53,8 +53,13 @@
 
 		<div class="collapse navbar-collapse flex-grow-1 text-right " id="navbarNav">
 			<ul class="nav navbar-nav ml-auto flex-nowra">
-				<li class="nav-item"><a class="nav-link px-3 cool-link" href="../index.html#about" id="aboutColor">ABOUT</a></li>
+				<!-- <li class="nav-item"><a class="nav-link px-3 cool-link" href="../index.html#about" id="aboutColor">ABOUT</a></li>
 				<li class="nav-item"><a class="nav-link px-3  cool-link" href="../index.html#projects">PROJECTS</a></li>
+				<li class="nav-item"><a class="nav-link px-3  cool-link" href="../index.html#contact">CONTACT</a></li> -->
+
+				<li class="nav-item"><a class="nav-link px-3 cool-link" href="../more.html" id="aboutColor">ABOUT</a></li>
+				<li class="nav-item"><a class="nav-link px-3  cool-link" href="../index.html#projects">PROJECTS</a></li>
+				<li class="nav-item"><a class="nav-link px-3  cool-link" href="../resume_varnit_jain.pdf" target="_blank">RESUME</a></li>
 				<li class="nav-item"><a class="nav-link px-3  cool-link" href="../index.html#contact">CONTACT</a></li>
 				<!-- 				<li class="nav-item"><a class="nav-link px-3  cool-link" href="#blog">BLOG</a></li> -->
 			</ul>
