--- a/more.html
+++ b/more.html
@@ -46,7 +46,7 @@
 			<ul class="nav navbar-nav ml-auto flex-nowra">
 				<li class="nav-item"><a class="nav-link px-3 cool-link" href="#" id="aboutColor">ABOUT</a></li>
 				<li class="nav-item"><a class="nav-link px-3  cool-link" href="index.html#projects">PROJECTS</a></li>
-				<li class="nav-item"><a class="nav-link px-3  cool-link" href="resume_varnit_jain.pdf" target="_blank">RESUME</a></li>
+				<!-- <li class="nav-item"><a class="nav-link px-3  cool-link" href="resume_varnit_jain.pdf" target="_blank">RESUME</a></li> -->
 				<li class="nav-item"><a class="nav-link px-3  cool-link" href="index.html#contact">CONTACT</a></li>
 				<!-- <li class="nav-item"><a class="nav-link px-3  cool-link" href="pages/blog.html">BLOG</a></li> -->
 			</ul>
