--- a/updated/projectPages/virtual.html
+++ b/updated/projectPages/virtual.html
@@ -38,9 +38,9 @@
         <div class="textImage">
           <!-- A scalable and modular toolkit for enabling
           physical manipulation in VR -->
-          A LEGO based scalable and modular toolkit
-          for physical-manipulation
-          enabled controllers for VR
+          A toolkit that enables developers to
+          build custom VR controllers with features
+          like rotation, translation, and stretch
         </div>
       </div>
 
@@ -120,30 +120,33 @@
             <div class="row">
 
               <div class="col-sm-3 introTextHeading2">
-                <div class="timelineBar bcolor1"></div>
+
                 Literature Review<br>
                 <span class="introTextContent">
                   7 weeks<br>
+                  <div class="timelineBar bcolor1"></div>
                   Analysed literature to understand the
                   field of VR controllers and define our problem statement
                 </span>
               </div>
 
               <div class="col-sm-3 introTextHeading2">
-                <div class="timelineBar bcolor3"></div>
+
                 Design Space<br>
                 <span class="introTextContent">
                   7 weeks<br>
+                  <div class="timelineBar bcolor3"></div>
                   Defined the design space which encompasses
                   the functionalities and possibilites of the toolkit.
                 </span>
               </div>
 
               <div class="col-sm-4 introTextHeading2">
-                <div class="timelineBar bcolor4"></div>
+
                 VR Development<br>
                 <span class="introTextContent">
                   10 weeks<br>
+                  <div class="timelineBar bcolor4"></div>
                   Designed and developed VR experiences and set up
                   lag-free serial communication
 
@@ -151,10 +154,11 @@
               </div>
 
               <div class="col-sm-2 introTextHeading2">
-                <div class="timelineBar bcolor5"></div>
+
                 Submission<br>
                 <span class="introTextContent">
                   4 weeks<br>
+                  <div class="timelineBar bcolor5"></div>
                   Completed research deliverables
                   as per ACM CHI format
                 </span>
