--- a/updated/index.html
+++ b/updated/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <div class="col-md-4">
-          Hello
+          PlaceHolder
         </div>
       </div>
     </div>
@@ -134,67 +134,100 @@
         </a>
       </div>
 
-        <div class="col-12 col-lg-6" id="cardNCR">
-          <a href="projectPages/ncr.html">
+      <div class="col-12 col-lg-6" id="cardNCR">
+        <a href="projectPages/ncr.html">
           <div class="projectCard project3" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
-              <span class="cardTitleMain cardTitleColor3"> NCR </span>
-              <div class = "hoverParent">
+            <span class="cardTitleMain cardTitleColor3"> NCR </span>
+            <div class = "hoverParent">
               <div class = "initialImage">
-                <img class="cardImageMain project3Image" src="coverImages/ncr.png"/>
+                <img class="cardImageMain project3Image" src="coverImages/ncr.png" />
               </div>
               <div class = "hoverContent" style=" opacity: 0;">
                 <div class="cardTextContent">
                   Augmenting NCR's Kiosks to be accessible to wheelchair users
                 </div>
-                  <img class="cardImageMain project1subImage" src="coverImages/alt/virtual.png"/>
+                  <img class="cardImageMain project1subImage" src="coverImages/alt/ncr.png"/>
               </div>
             </div>
-          </div>
-          </a>
-        </div>
-
-        <div class="col-12 col-lg-6" id="cardLameBot">
-          <a href="projectPages/lamebot.html">
-          <div class="projectCard project4">
-            <span class="cardTitleMain cardTitleColor4"> LAMEBOT </span>
-            <img class="cardImageMain project4Image" src="coverImages/lamebot.png"/>
             <div class="impactText">
-              <span class="cardTitleMain cardTitleColor4" align="right" width="100%"> Demo Inside </span>
+              <span class="cardTitleMain cardTitleColor3"> Collaboration </span>
             </div>
           </div>
         </a>
+      </div>
+
+        <div class="col-12 col-lg-6" id="cardLameBot">
+          <a href="projectPages/lamebot.html">
+            <div class="projectCard project4" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
+              <span class="cardTitleMain cardTitleColor4"> LAMEBOT </span>
+              <div class = "hoverParent">
+                <div class = "initialImage">
+                  <img class="cardImageMain project4Image" src="coverImages/lamebot.png" />
+                </div>
+                <div class = "hoverContent" style=" opacity: 0;">
+                  <div class="cardTextContent">
+                    A chatbot that tries to mimic my speech patterns
+                  </div>
+                    <img class="cardImageMain project4subImage" src="coverImages/alt/lamebot.png"/>
+                </div>
+              </div>
+              <div class="impactText">
+                <span class="cardTitleMain cardTitleColor4"> Demo Inside </span>
+              </div>
+            </div>
+          </a>
         </div>
 
 
         <div class="col-12 col-lg-6" id="cardMime">
           <a href="projectPages/mime.html">
-          <div class="projectCard project5">
-            <span class="cardTitleMain cardTitleColor5"> MIME </span>
-            <img class="cardImageMain project5Image" src="coverImages/mime.png"/>
-            <div class="impactText">
-              <span class="cardTitleMain cardTitleColor5" align="right" width="100%">Android Play Store </span>
+            <div class="projectCard project5" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
+              <span class="cardTitleMain cardTitleColor5"> MIME </span>
+              <div class = "hoverParent">
+                <div class = "initialImage">
+                  <img class="cardImageMain project5Image" src="coverImages/mime.png" />
+                </div>
+                <div class = "hoverContent" style=" opacity: 0;">
+                  <div class="cardTextContent">
+                    A platform where user can create and share
+                    memes, and connect with fellow meme enthusiasts
+                  </div>
+                    <img class="cardImageMain project5subImage" src="coverImages/alt/mime.png"/>
+                </div>
+              </div>
+              <div class="impactText">
+                <span class="cardTitleMain cardTitleColor4"> Android Play Store </span>
+              </div>
             </div>
-          </div>
-        </a>
+          </a>
         </div>
 
         <div class="col-12 col-lg-6" id="cardBrailleIO">
           <a href="projectPages/braille.html">
-          <div class="projectCard project6">
-            <span class="cardTitleMain cardTitleColor6"> BRAILLE IO </span>
-            <img class="cardImageMain project6Image" src="coverImages/braille.png"/>
-            <div class="impactText">
-              <span class="cardTitleMain cardTitleColor6" align="right" width="100%"> Maker Fair '16</span>
+            <div class="projectCard project6" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
+              <span class="cardTitleMain cardTitleColor6"> BRAILLE IO </span>
+              <div class = "hoverParent">
+                <div class = "initialImage">
+                  <img class="cardImageMain project6Image" src="coverImages/braille.png" />
+                </div>
+                <div class = "hoverContent" style=" opacity: 0;">
+                  <div class="cardTextContent">
+                    A prototype of a Braille printer
+                    made using old CD/DVD drives
+                  </div>
+                    <img class="cardImageMain project6subImage" src="coverImages/alt/braille.png"/>
+                </div>
+              </div>
+              <div class="impactText">
+                <span class="cardTitleMain cardTitleColor6"> Maker Fair '16 </span>
+              </div>
             </div>
-          </div>
-        </a>
-        </div
-
-
+          </a>
+        </div>
 
       </div>
 
-    </div
+    </div>
 
 
   </div>
