--- a/updated/projectPages/mime.html
+++ b/updated/projectPages/mime.html
@@ -33,7 +33,7 @@
     <div class="tldrSection">
 
       <div class="topImage">
-        <img src="../images/mime/tldr.jpg" class="backgroundImage">
+        <img src="../images/mime/tldr2.jpg" class="backgroundImage">
         <div class="textImage">
           <!-- A scalable and modular toolkit for enabling
           physical manipulation in VR -->
