--- a/updated/index.html
+++ b/updated/index.html
@@ -12,6 +12,7 @@
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <link rel="stylesheet" type="text/css" href="css/navbarStyle.css">
   <link rel="stylesheet" type="text/css" href="css/mainStyle.css">
@@ -56,15 +57,17 @@
 
     <div class="helloSection">
       <div class="row">
-        <div class="col-md-8 helloText">
-          Hi, I'm Varnit. </br>
-          I create
-          <span class="txt anim-text-flow">Experiences!</span>
-          <!-- <span class="wonderText">experiences</span>. -->
+        <div class="col-xl-8 helloText">
+          <div>
+            Hi, I'm Varnit. </br>
+            I create
+            <span class="txt anim-text-flow">Experiences!</span>
+            <!-- <span class="wonderText">experiences</span>. -->
+          </div>
         </div>
 
-        <div class="col-md-4">
-          PlaceHolder
+        <div class="col-xl-4">
+          <canvas id="canvas"></canvas>
         </div>
       </div>
     </div>
@@ -235,6 +238,7 @@
 
   <script src="js/navbarScript.js"></script>
   <script src="js/mainScript.js"></script>
+  <script src="js/gameScript.js" charset="utf-8"></script>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
