--- a/updated/test.html
+++ b/updated/test.html
@@ -4,15 +4,7 @@
 <canvas id="canvas"></canvas>
 <script>
     // The attributes of the player.
-    var player = {
-        x: 200,    //Initial Spawn Position
-        y: 200,
-        x_v: 0,
-        y_v: 0,
-        jump : true,
-        height: 20,
-        width: 20
-    };
+    var player;
 
     // The status of the arrow keys
     var keys = {
@@ -22,23 +14,75 @@
     };
 
     // The friction and gravity to show realistic movements
-    var gravity = 0.6;
+    var gravity = 0.5;
     var friction = 0.7;
 
     //Speed and Score
-    var speed = 2;
-    var score=0;
+    var speed;
+    var score;
     var prevPlat = "#fc0";
 
-    // The number of platforms
-    var num = 2;
     // Has the user pressed space bar yet
-    var isPlaying = false;
+    var isPlaying;
+    var gameStatus=-1;
+
     // The platforms
-    var platforms = [];
+    var platforms;
+
     // Colors of platforms
     var colors = ["#fc0", "#f36", "#09f", "#f90", "#85f", "#0fa"];
     colorNum = 0;
+
+    //Inititialize Shit
+    function inititializeThings(){
+      player = {
+          x: 200,    //Initial Spawn Position
+          y: 200,
+          x_v: 0,
+          y_v: 0,
+          jump : true,
+          height: 20,
+          width: 20
+      };
+      speed = 2;
+      score=0;
+      prevPlat = "#fc0";
+
+      isPlaying = false;
+      platforms = [];
+      colorNum = 0;
+      createplat();
+      renderScore();
+    }
+
+    function renderScore(){
+      // ctx.font="100px";
+      ctx.fillStyle = "white";
+      ctx.textAlign = "right";
+      ctx.fillText("Score: " + score, 280, 30);
+
+      if(gameStatus == -1){
+        ctx.font = "15px Tahoma";
+        ctx.fillStyle = "white";
+        ctx.textAlign = "left";
+        ctx.fillText("Press Top Arrow to Start" , 20, 280);
+      }
+      else if(gameStatus == 0){
+        ctx.fillStyle = "white";
+        ctx.textAlign = "left";
+        ctx.fillText("Controls: Left, Top, Right" , 20, 280);
+      }
+      else if(gameStatus == 1){
+        ctx.fillStyle = "white";
+        ctx.textAlign = "left";
+        ctx.fillText("Press R to Restart" , 20, 280);
+      }
+
+    }
+
+    function stop(){
+      isPlaying = false;
+    }
 
     // Function to render the canvas
     function rendercanvas(){
@@ -46,25 +90,29 @@
         ctx.fillRect(0, 0, 500, 300);
     }
 
-
     // Function to render the player
     function renderplayer(){
         ctx.fillStyle = "#FFFFFF";
         ctx.fillRect((player.x)-20, (player.y)-20, player.width, player.height);
     }
 
+    function renderplayer(){
+      var img = new Image();
+        img.onload = function() {
+          ctx.drawImage(img, player.x-28, player.y-40, 40, 40);
+      }
+      img.src = "ghost.svg";
+    }
 
     // Function to create platforms
     function createplat(){
-      platforms.push(
-          {
+      platforms.push({
           x: 0,
           y: 200,
           width: 500,
           height: 15,
           color: colors[(colorNum++)%6]
-          }
-      );
+      });
     }
 
     // Function to render platforms
@@ -74,6 +122,7 @@
         ctx.fillRect(platforms[i].x, platforms[i].y, platforms[i].width, platforms[i].height);
       }
     }
+
     function renderplat2(){
       for(var i=0; i<platforms.length;i++){
         ctx.fillStyle = platforms[i].color;
@@ -103,7 +152,6 @@
       }
     }
 
-
     // This function will be called when a key on the keyboard is pressed
     function keydown(e) {
         // 37 is the code for the left arrow key
@@ -111,14 +159,23 @@
             keys.left = true;
         }
         // 37 is the code for the up arrow key
-        if(e.keyCode == 38 || e.keyCode == 32) {
+        if(e.keyCode == 38){ // || e.keyCode == 32) {
             if(player.jump == false) {
                 player.y_v = -10;
             }
+            isPlaying = true;
+            gameStatus = 0;
         }
         // 39 is the code for the right arrow key
         if(e.keyCode == 39) {
             keys.right = true;
+        }
+
+        // 82 is the code for the r
+        if(e.keyCode == 82) {
+            inititializeThings();
+            isPlaying = true;
+            gameStatus = 0;
         }
     }
 
@@ -127,7 +184,7 @@
         if(e.keyCode == 37) {
             keys.left = false;
         }
-        if(e.keyCode == 38 || e.keyCode == 32) {
+        if(e.keyCode == 38){ // || e.keyCode == 32) {
             if(player.y_v < -2) {
             player.y_v = -3;
             }
@@ -140,9 +197,9 @@
     function platformInit(){
       platforms.push(
           {
-          x: 600,
-          y: 200,
-          width: 200,
+          x: 550 + Math.floor(Math.random() * 100),
+          y: 150 + Math.floor(Math.random() * 100),
+          width: 100 + Math.floor(Math.random() * 100),
           height: 15,
           color: colors[(colorNum++)%6]
           }
@@ -150,14 +207,16 @@
     }
 
     function managePlatforms(){
-      for(var i=0; i<platforms.length;i++){
-        platforms[i].x -= speed;
-        if(platforms[i].x + platforms[i].width < 0){
-          platforms.splice(i,1);
+      if (isPlaying){
+        for(var i=0; i<platforms.length;i++){
+          platforms[i].x -= speed;
+          if(platforms[i].x + platforms[i].width < 0){
+            platforms.splice(i,1);
+          }
         }
-      }
-      if (platforms[platforms.length-1].x + platforms[platforms.length-1].width < 500){
-        platformInit();
+        if (platforms[platforms.length-1].x + platforms[platforms.length-1].width < 500){
+          platformInit();
+        }
       }
     }
 
@@ -205,7 +264,7 @@
           prevPlat = platforms[coli].color;
 
           score++;
-          speed = (score/3)+1;
+          speed = (score/3)+0.5;
           if(speed<2){
             speed=2;
           }
@@ -215,8 +274,16 @@
         rendercanvas();
         renderplayer();
         renderplat2();
+        renderScore();
 
-        console.log(score);
+        // console.log(player.y);
+
+        if(player.y > 300){
+          isPlaying = false;
+          gameStatus = 1;
+          // showScore();
+        }
+
     }
 
     canvas=document.getElementById("canvas");
@@ -224,13 +291,13 @@
     ctx.canvas.height = 300;
     ctx.canvas.width = 500;
 
-    createplat();
+    inititializeThings();
 
     // Adding the event listeners
     document.addEventListener("keydown",keydown);
     document.addEventListener("keyup",keyup);
 
-    setInterval(loop,22);
+    setInterval(loop,20);
 
 </script>
 <body>
