--- a/updated/index.html
+++ b/updated/index.html
@@ -55,7 +55,7 @@
 
   <div class="container">
 
-    <div class="helloSection">
+    <div class="helloSection" id="gameClick">
       <div class="row">
         <div class="col-xl-8 helloText">
           <div>
