--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 		<div class="collapse navbar-collapse flex-grow-1 text-right " id="navbarNav">
 			<ul class="nav navbar-nav ml-auto flex-nowra">
-				<li class="nav-item"><a class="nav-link px-3 cool-link" href="more.html" id="aboutColor">ABOUT</a></li>
+				<li class="nav-item"><a class="nav-link px-3 cool-link" href="more.html" id="aboutColor">RESUME</a></li>
 				<li class="nav-item"><a class="nav-link px-3  cool-link" href="#projects">PROJECTS</a></li>
 				<!-- <li class="nav-item"><a class="nav-link px-3  cool-link" href="resume_varnit_jain.pdf" target="_blank">RESUME</a></li> -->
 				<li class="nav-item"><a class="nav-link px-3  cool-link" href="#contact">CONTACT</a></li>
