--- a/more.html
+++ b/more.html
@@ -10,7 +10,7 @@
   gtag('config', 'UA-153999364-1');
 </script>
 
-	<title>About | Varnit Jain</title>
+	<title>RESUME | Varnit Jain</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -44,7 +44,7 @@
 
 		<div class="collapse navbar-collapse flex-grow-1 text-right " id="navbarNav">
 			<ul class="nav navbar-nav ml-auto flex-nowra">
-				<li class="nav-item"><a class="nav-link px-3 cool-link" href="#" id="aboutColor">ABOUT</a></li>
+				<li class="nav-item"><a class="nav-link px-3 cool-link" href="#" id="aboutColor">RESUME</a></li>
 				<li class="nav-item"><a class="nav-link px-3  cool-link" href="index.html#projects">PROJECTS</a></li>
 				<!-- <li class="nav-item"><a class="nav-link px-3  cool-link" href="resume_varnit_jain.pdf" target="_blank">RESUME</a></li> -->
 				<li class="nav-item"><a class="nav-link px-3  cool-link" href="index.html#contact">CONTACT</a></li>
@@ -62,13 +62,14 @@
 		<div class="jumbotron">
 			<div class="sideSpacing">
 				<!-- <h1 class="display-4">Hi</h1> -->
-				<h1 class="funHeading">About me!  &nbsp;  <span id="changeText">@_@</span></h1>
+				<!-- <h1 class="funHeading">Resume!  &nbsp;  <span id="changeText">@_@</span></h1> -->
 				
 
 				<!-- I am looking for an internship for summer 2020 that will challenge me to solve everyday problems using creative solutions while enabling me to contribute, learn, and grow.  -->
 				<br>
 				<p class="contentTextMore">
-				Software + Hardware + UX
+				<a href="https://bit.ly/varnit_software" id="arrow" class="parent">Software Resume</a> <br>
+				<a href="https://bit.ly/varnit_ux" id="arrow" class="parent">UX Resume</a>
 				</p>	
  
 
