--- a/updated/index.html
+++ b/updated/index.html
@@ -22,57 +22,57 @@
 <body>
 
   <!-- <div class="page">
-    <div class="navi">
-      <div class="nav__close"></div>
-      <ul class="nav__list">
-        <li class="nav__item">
-          <a class="nav__link" href="#" title="Home">Home</a>
-        </li>
-        <li class="nav__item">
-          <a class="nav__link" href="#" title="About">About</a>
-        </li>
-        <li class="nav__item">
-          <a class="nav__link" href="#" title="Tour">Tinker Lab</a>
-        </li>
-        <li class="nav__item">
-          <a class="nav__link" href="#" title="Tour">Resume</a>
-        </li>
-        <li class="nav__item">
-          <a class="nav__link" href="#" title="Tour">Socials</a>
-        </li>
-      </ul>
-    </div>
+  <div class="navi">
+  <div class="nav__close"></div>
+  <ul class="nav__list">
+  <li class="nav__item">
+  <a class="nav__link" href="#" title="Home">Home</a>
+</li>
+<li class="nav__item">
+<a class="nav__link" href="#" title="About">About</a>
+</li>
+<li class="nav__item">
+<a class="nav__link" href="#" title="Tour">Tinker Lab</a>
+</li>
+<li class="nav__item">
+<a class="nav__link" href="#" title="Tour">Resume</a>
+</li>
+<li class="nav__item">
+<a class="nav__link" href="#" title="Tour">Socials</a>
+</li>
+</ul>
+</div>
 
-    <div class="page__content">
-      <div class="nav-open-btn">
-        <div class="nav-open-btn__bar"></div>
-        <div class="nav-open-btn__bar"></div>
-        <div class="nav-open-btn__bar"></div>
-      </div>
+<div class="page__content">
+<div class="nav-open-btn">
+<div class="nav-open-btn__bar"></div>
+<div class="nav-open-btn__bar"></div>
+<div class="nav-open-btn__bar"></div>
+</div>
 
-    </div>
-  </div> -->
+</div>
+</div> -->
 
-  <div class="container">
+<div class="container">
 
-    <div class="helloSection" id="gameClick">
-      <div class="row">
-        <div class="col-xl-8 helloText">
-          <div>
-            Hi, I'm Varnit. </br>
-            I create
-            <span class="txt anim-text-flow">Experiences!</span>
-            <!-- <span class="wonderText">experiences</span>. -->
-          </div>
-        </div>
-
-        <div class="col-xl-4">
-          <canvas id="canvas"></canvas>
+  <div class="helloSection" id="gameClick">
+    <div class="row">
+      <div class="col-xl-8 helloText">
+        <div>
+          Hi, I'm Varnit. </br>
+          I create
+          <span class="txt anim-text-flow">Experiences!</span>
+          <!-- <span class="wonderText">experiences</span>. -->
         </div>
       </div>
-    </div>
 
-    <div class="categoriesSection">
+      <div class="col-xl-4">
+        <canvas id="canvas"></canvas>
+      </div>
+    </div>
+  </div>
+
+  <div class="categoriesSection">
 
     <a href="#!" onclick="allDisplay(this)">
       <span class="categoryButton selectedCategoryButton">All</span>
@@ -89,30 +89,32 @@
 
   </div>
 
-    <div class="projectsSection">
+  <div class="projectsSection">
 
-      <div class="row">
-        <div class="col-12 col-lg-6 " id="cardPECSS">
-          <a href="projectPages/pecss.html">
-            <div class="projectCard project1" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
-                <span class="cardTitleMain cardTitleColor1"> PECSS </span>
-                <div class = "hoverParent">
-                  <div class = "initialImage">
-                    <img class="cardImageMain project1Image" src="coverImages/pecss.png"/>
-                  </div>
-                  <div class = "hoverContent" style=" opacity: 0;">
-                    <div class="cardTextContent">
-                      A platform to administer and visualize patient's progress during PTSD therapy
-                    </div>
-                      <img class="cardImageMain project1subImage" src="coverImages/alt/pecss.png"/>
-                  </div>
+    <div class="row">
+
+      <div class="col-12 col-lg-6 " id="cardPECSS">
+        <a href="projectPages/pecss.html">
+          <div class="projectCard project1" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
+            <span class="cardTitleMain cardTitleColor1"> PECSS </span>
+            <div class = "hoverParent">
+              <div class = "initialImage">
+                <div class="cardTextContent">
+                  A platform to administer and visualize patient's progress during PTSD therapy
                 </div>
-                <div class="impactText">
-                  <span class="cardTitleMain cardTitleColor1" align="right" width="100%"> Master's Thesis </span>
-                </div>
+                <img class="cardImageMain project1Image" src="coverImages/pecss.png"/>
+              </div>
+              <div class = "hoverContent" style=" opacity: 0;">
+                <img class="cardImageMain project1subImage" src="coverImages/alt/pecss.png"/>
+              </div>
             </div>
-          </a>
+            <div class="impactText">
+              <span class="cardTitleMain cardTitleColor1" align="right" width="100%"> Master's Thesis </span>
+            </div>
+          </div>
+        </a>
       </div>
+
 
 
       <div class="col-12 col-lg-6" id="cardVirtual">
@@ -121,13 +123,13 @@
             <span class="cardTitleMain cardTitleColor2"> VIRTUAL BRICKS </span>
             <div class = "hoverParent">
               <div class = "initialImage">
+                <div class="cardTextContent">
+                  A toolkit for developers to build custom VR controllers with features like rotation, translation, and stretch
+                </div>
                 <img class="cardImageMain project2Image" src="coverImages/virtual.png" />
               </div>
               <div class = "hoverContent" style=" opacity: 0;">
-                <div class="cardTextContent">
-                  A toolkit that enables developers to build custom VR controllers with features like rotation, translation, and stretch
-                </div>
-                  <img class="cardImageMain project1subImage" src="coverImages/alt/virtual2.png"/>
+                <img class="cardImageMain project1subImage" src="coverImages/alt/virtual2.png"/>
               </div>
             </div>
             <div class="impactText">
@@ -137,19 +139,21 @@
         </a>
       </div>
 
+
+
       <div class="col-12 col-lg-6" id="cardNCR">
         <a href="projectPages/ncr.html">
           <div class="projectCard project3" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
             <span class="cardTitleMain cardTitleColor3"> NCR </span>
             <div class = "hoverParent">
               <div class = "initialImage">
-                <img class="cardImageMain project3Image" src="coverImages/ncr.png" />
-              </div>
-              <div class = "hoverContent" style=" opacity: 0;">
                 <div class="cardTextContent">
                   Augmenting NCR's Kiosks to be accessible to wheelchair users
                 </div>
-                  <img class="cardImageMain project1subImage" src="coverImages/alt/ncr.png"/>
+                <img class="cardImageMain project3Image" src="coverImages/ncr.png" />
+              </div>
+              <div class = "hoverContent" style=" opacity: 0;">
+                <img class="cardImageMain project3subImage" src="coverImages/alt/ncr.png"/>
               </div>
             </div>
             <div class="impactText">
@@ -159,90 +163,90 @@
         </a>
       </div>
 
-        <div class="col-12 col-lg-6" id="cardLameBot">
-          <a href="projectPages/lamebot.html">
-            <div class="projectCard project4" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
-              <span class="cardTitleMain cardTitleColor4"> LAMEBOT </span>
-              <div class = "hoverParent">
-                <div class = "initialImage">
-                  <img class="cardImageMain project4Image" src="coverImages/lamebot.png" />
+      <div class="col-12 col-lg-6" id="cardLameBot">
+        <a href="projectPages/lamebot.html">
+          <div class="projectCard project4" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
+            <span class="cardTitleMain cardTitleColor4"> LAMEBOT </span>
+            <div class = "hoverParent">
+              <div class = "initialImage">
+                <div class="cardTextContent">
+                  A chatbot that tries to mimic my speech patterns
                 </div>
-                <div class = "hoverContent" style=" opacity: 0;">
-                  <div class="cardTextContent">
-                    A chatbot that tries to mimic my speech patterns
-                  </div>
-                    <img class="cardImageMain project4subImage" src="coverImages/alt/lamebot.png"/>
-                </div>
+                <img class="cardImageMain project4Image" src="coverImages/lamebot.png" />
               </div>
-              <div class="impactText">
-                <span class="cardTitleMain cardTitleColor4"> Demo Inside </span>
+              <div class = "hoverContent" style=" opacity: 0;">
+                <img class="cardImageMain project4subImage" src="coverImages/alt/lamebot.png"/>
               </div>
             </div>
-          </a>
-        </div>
+            <div class="impactText">
+              <span class="cardTitleMain cardTitleColor4"> Demo Inside </span>
+            </div>
+          </div>
+        </a>
+      </div>
 
 
-        <div class="col-12 col-lg-6" id="cardMime">
-          <a href="projectPages/mime.html">
-            <div class="projectCard project5" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
-              <span class="cardTitleMain cardTitleColor5"> MIME </span>
-              <div class = "hoverParent">
-                <div class = "initialImage">
-                  <img class="cardImageMain project5Image" src="coverImages/mime.png" />
+      <div class="col-12 col-lg-6" id="cardMime">
+        <a href="projectPages/mime.html">
+          <div class="projectCard project5" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
+            <span class="cardTitleMain cardTitleColor5"> MIME </span>
+            <div class = "hoverParent">
+              <div class = "initialImage">
+                <div class="cardTextContent">
+                  A platform where user can create and share
+                  memes, and connect with fellow meme enthusiasts
                 </div>
-                <div class = "hoverContent" style=" opacity: 0;">
-                  <div class="cardTextContent">
-                    A platform where user can create and share
-                    memes, and connect with fellow meme enthusiasts
-                  </div>
-                    <img class="cardImageMain project5subImage" src="coverImages/alt/mime.png"/>
-                </div>
+                <img class="cardImageMain project5Image" src="coverImages/mime.png" />
               </div>
-              <div class="impactText">
-                <span class="cardTitleMain cardTitleColor4"> Android Play Store </span>
+              <div class = "hoverContent" style=" opacity: 0;">
+                <img class="cardImageMain project5subImage" src="coverImages/alt/mime.png"/>
               </div>
             </div>
-          </a>
-        </div>
+            <div class="impactText">
+              <span class="cardTitleMain cardTitleColor5"> Android Play Store </span>
+            </div>
+          </div>
+        </a>
+      </div>
 
-        <div class="col-12 col-lg-6" id="cardBrailleIO">
-          <a href="projectPages/braille.html">
-            <div class="projectCard project6" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
-              <span class="cardTitleMain cardTitleColor6"> BRAILLE IO </span>
-              <div class = "hoverParent">
-                <div class = "initialImage">
-                  <img class="cardImageMain project6Image" src="coverImages/braille.png" />
+      <div class="col-12 col-lg-6" id="cardBrailleIO">
+        <a href="projectPages/braille.html">
+          <div class="projectCard project6" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
+            <span class="cardTitleMain cardTitleColor6"> BRAILLE IO </span>
+            <div class = "hoverParent">
+              <div class = "initialImage">
+                <div class="cardTextContent">
+                  A prototype of a Braille printer
+                  made using old CD/DVD drives
                 </div>
-                <div class = "hoverContent" style=" opacity: 0;">
-                  <div class="cardTextContent">
-                    A prototype of a Braille printer
-                    made using old CD/DVD drives
-                  </div>
-                    <img class="cardImageMain project6subImage" src="coverImages/alt/braille.png"/>
-                </div>
+                <img class="cardImageMain project6Image" src="coverImages/braille.png" />
               </div>
-              <div class="impactText">
-                <span class="cardTitleMain cardTitleColor6"> Maker Fair '16 </span>
+              <div class = "hoverContent" style=" opacity: 0;">
+                <img class="cardImageMain project6subImage" src="coverImages/alt/braille.png"/>
               </div>
             </div>
-          </a>
-        </div>
-
+            <div class="impactText">
+              <span class="cardTitleMain cardTitleColor6"> Maker Fair '16 </span>
+            </div>
+          </div>
+        </a>
       </div>
 
     </div>
 
-
   </div>
 
 
-  <script src="js/navbarScript.js"></script>
-  <script src="js/mainScript.js"></script>
-  <script src="js/gameScript.js" charset="utf-8"></script>
+</div>
 
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+<script src="js/navbarScript.js"></script>
+<script src="js/mainScript.js"></script>
+<script src="js/gameScript.js" charset="utf-8"></script>
+
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 </body>
 </html>
